# crisprme-dev

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
engine/: .gitignore  Cargo.toml  Dockerfile  README.md  build-release.sh  testing.sh
engine/benchmark/: benchmark.py  benchmark_multi_gpu.py  chr1.csv  chr10.csv  chr11.csv  chr12.csv  chr13.csv  chr14.csv  chr15.csv  chr16.csv  chr17.csv  chr18.csv  chr19.csv  chr2.csv  chr20.csv  chr21.csv  chr22.csv  chr3.csv  chr4.csv  chr5.csv  chr6.csv  chr7.csv  chr8.csv  chr9.csv  chrX.csv  chrY.csv  log.txt  stats.sh  temp.txt
engine/crisprme/: Cargo.toml
engine/crisprme-core/: Cargo.toml  build.rs
engine/crisprme-core/include/: scores.cuh
engine/crisprme-core/src/: cuda.rs  lib.rs  mine.rs  utils.rs
engine/crisprme-core/src/bindings/: cuda.rs  miner.rs  mod.rs  score.rs
engine/crisprme-core/src/common/: alignment.rs  cigarx.rs  guide.rs  iupac.rs  mod.rs  sequence.rs  thresholds.rs
engine/crisprme-core/src/cuda/: alignment.cu  cigarx.cu  scores.cu  stack.cu
engine/crisprme-core/src/cuda/miners/: warp_reg_stack_nopam.cu
engine/crisprme-core/src/memory/: batch.rs  mod.rs
engine/crisprme-core/src/pipeline/: mod.rs
engine/crisprme-core/src/pipeline/engine/: hybrid.rs
engine/crisprme-core/src/pipeline/miner/: mod.rs
engine/crisprme-core/src/storage/: convert.rs  mod.rs  reader.rs  writer.rs
engine/crisprme-core/tests/: end_to_end.rs
engine/crisprme/src/: common.rs  main.rs
engine/scripts/: compare.py  compare_1000genome.py  compare_gnomad.py  hgdp.py  kgp.py  preprocess-folder.sh  preprocess-ref-genome.sh  reference.py
examples/: dataset_pipeline.py  pipeline.py
native/: Cargo.toml
native/columnar/: Cargo.toml
native/columnar/src/: column.rs  frame.rs  lib.rs  memory.rs  pipeline.rs  python.rs  shared.rs  typed.rs
native/columnar_derive/: Cargo.toml
native/columnar_derive/src/: codegen.rs  lib.rs  parse.rs  repr.rs
native/crisprme-core/: Cargo.toml
native/crisprme-core/include/: common.cuh
native/crisprme-core/src/: lib.rs
native/crisprme-core/src/alignment/: cigarx.rs
native/crisprme-core/src/batching/: batching.rs
native/crisprme-core/src/bindings/: mod.rs
native/crisprme-core/src/crispr/: guide.rs
native/crisprme-core/src/cuda/: cigarx.cu
native/crisprme-core/src/engine/: hybrid.rs  params.rs
native/crisprme-core/src/memory/: batch.rs  mod.rs
native/crisprme-core/src/python/: mod.rs  views.rs
native/crisprme-core/src/storage/: reader.rs  writer.rs
native/crisprme2/: Cargo.toml  build.rs
native/crisprme2-columnar/: Cargo.toml
native/crisprme2-columnar/src/: arena.rs  buffer.rs  lib.rs  pipeline.rs  pool.rs
native/crisprme2-derive/: Cargo.toml
native/crisprme2-derive/src/: lib.rs  repr.rs
native/crisprme2-derive/src/codegen/: pyclass.rs  schema.rs
native/crisprme2/include/: api.cuh  common.cuh  miner.cuh  u128.cuh
native/crisprme2/src/: lib.rs
native/crisprme2/src/alignment/: alignment.rs  cigarx.rs  mod.rs  thresholds.rs
native/crisprme2/src/annotation/: annotate.rs  bitset.rs  features.rs  mod.rs
native/crisprme2/src/batching/: batching.rs  mod.rs
native/crisprme2/src/bindings/: cuda.rs  miner.rs  mod.rs
native/crisprme2/src/crispr/: guide.rs  mod.rs  pam.rs  target.rs
native/crisprme2/src/cuda/: driver.cu  stack.cu
native/crisprme2/src/engine/: hybrid.rs  mod.rs  pack.rs  params.rs
native/crisprme2/src/error/: crisprme_errors.rs  mod.rs
native/crisprme2/src/memory/: arena.rs  batch.rs  mod.rs  ring.rs
native/crisprme2/src/model/: alignment.rs  cigarx.rs  input.rs  mod.rs  occurence.rs
native/crisprme2/src/pipeline/: broadcast.rs  merge.rs  miner.rs  mod.rs  resolve.rs  scanner.rs  transform.rs
native/crisprme2/src/python/: mod.rs  pyerrors.rs  (+3 more)
native/rust/: Cargo.toml  build.rs
native/rust/include/: api.cuh
native/rust/src/: lib.rs
native/rust/src/alignment/: alignment.rs  mod.rs
native/rust/src/annotation/: annotate.rs  bitset.rs  features.rs
native/rust/src/batching/: batcher.rs  batcher_new.rs  batcher_old.rs  batching.rs  mod.rs
native/rust/src/bindings/: cuda.rs  mod.rs  scores.rs
native/rust/src/crispr/: guide.rs  mod.rs  pam.rs
native/rust/src/cuda/: iupac.cu  scores.cu  step.cu
native/rust/src/cuda/miners/: warp_reg_stack.cu  warp_reg_stack_nopam_resumable.cu
native/rust/src/engine/: hybrid.rs  mod.rs  pack.rs
native/rust/src/memory/: batch.rs  mod.rs  ring.rs
native/rust/src/python/: mod.rs  pyannotation.rs  views.rs
native/rust/src/sequence/: iupac.rs  mod.rs
native/rust/src/storage/: convert.rs  reader.rs  writer.rs
native/rust/src/utils/: thresholds.rs
python/crisprme2/: __main__.py  crisprme2.py  crisprme2_argparse.py  enricher.py  exception_handlers.py  logger.py  offtarget.py  scanner.py  utils.py  variant.py  vcf.py
rust/: Cargo.toml
rust/src/: batcher.rs  guide.rs  hashing.rs  iupac.rs  lib.rs  pam.rs  scan.rs  scanner.rs  target.rs  threadpool.rs
rust/src/alignment/: alignment.rs  cigarx.rs  mod.rs
rust/src/bindings/: aligner.rs  cuda.rs  mod.rs  scores.rs
rust/src/crispr/: pam.rs
rust/src/memory/: arena.rs  batch.rs  ring.rs
rust/src/sequence/: iupac.rs  scanner.rs  sequence.rs
rust/src/utils/: mod.rs  threadpool.rs
src/crisprme2/: __main__.py  annotation.py  bedfile.py  bitset.py  complete_search.py  coordinate.py  crisprme2.py  crisprme2_argparse.py  crisprme2_error.py  crisprme2_warning.py  dna_alphabet.py  encoder.py  enricher.py  exception_handlers.py  fasta.py  fasta_utils.py  guide.py  logger.py  pam.py  protocol.py  sample.py  scanner.py  search.py  sequence.py  target.py  utils.py  variant.py  vcf.py  verbosity.py
src/crisprme2/crisprme_core/: __init__.py  api.py  crisprme_api_error.py
src/crisprme2/crisprme_core_api/: __init__.py  alignment.py  crisprme2_api_error.py  crisprme_api_error.py  feature_registry.py  native_logging.py  pipeline.py  target_batcher.py  thresholds.py
src/crisprme2/scores/: __init__.py  crisprme2_scores_error.py
tests/: test_engine.py
(+23 files in other folders)
