# =============================================================================
# pyproject.toml
# =============================================================================

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-rust>=1.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crisprme2"
version = "0.1.0"
description = "CRISPRme2: High-performance and scalable tool for variant- and haplotype-aware genome-wide off-target assessment in CRISPR-Cas systems"
readme = "README.md"
authors = [
    {name = "Manuel Tognon", email = "manu.tognon@gmail.com"}
]
maintainers = [
    {name = "Manuel Tognon", email = "manu.tognon@gmail.com"}
]
license = {text = "AGPL-3"}
keywords = ["CRISPR", "off-targets", "haplotype", "variant", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.scripts]
crisprme2 = "crisprme2.__main__:main"

[project.urls]
Homepage = "https://github.com/ManuelTgn/CRISPRme2"
Documentation = "https://github.com/ManuelTgn/CRISPRme2"
Repository = "https://github.com/ManuelTgn/CRISPRme2"
"Bug Tracker" = "https://github.com/ManuelTgn/CRISPRme2/issues"
Changelog = "https://github.com/ManuelTgn/CRISPRme2/blob/main/CHANGELOG.md"

# =============================================================================
# Tool configurations
# =============================================================================

[tool.setuptools]
package-dir = {"" = "python"}
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
"crisprme2" = ["scripts/*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# =============================================================================
# Development tool configurations
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["crisprme2"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "crisprme2.*"
ignore_errors = false

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.coverage.run]
source = ["python/crisprme2"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]