# =============================================================================
# setup.cfg
# =============================================================================
[metadata]
name = crisprme2
version = 0.1.0
author = Manuel Tognon
author_email = manu.tognon@gmail.com
description = CRISPRme2: High-performance and scalable tool for variant- and haplotype-aware genome-wide off-target assessment in CRISPR-Cas systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ManuelTgn/CRISPRme2
project_urls =
    Bug Tracker = https://github.com/ManuelTgn/CRISPRme2/issues
    Documentation = https://github.com/ManuelTgn/CRISPRme2
    Source = https://github.com/ManuelTgn/CRISPRme2
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: AGPL-3 License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = file: requirements.txt
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    crisprme2 = crisprme2.__main__:main

[options.extras_require]
dev = 
    pytest
    black
    flake8
    mypy
docs = 
    sphinx
    sphinx-rtd-theme

# =============================================================================
# Tool configurations 
# =============================================================================

[tool:pytest]
addopts = -ra --strict-markers
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True