[package]
name = "crisprme2_rs"
version = "0.1.0"
edition = "2021"
authors = ["Manuel Tognon"]
license = "MIT"

[lib]
name = "target_candidates_scanner_rs"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8"
bincode = "1.3"
bump-scope = "1.3.0"
bumpalo = { version = "3.17.0", features = ["collections"] }
bytemuck = "1.23.2"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5"
cxx = { version = "1.0.157", features = ["c++17"] }
enum_dispatch = "0.3.13"
indicatif = "0.18.0"
memmap2 = "0.9.7"
nix = "0.30.1"
num-traits = "0.2.19"
num_cpus = "1.17.0"
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
rand = { version = "0.9.1" }
rayon = "1.10.0"
thread_local = "1.1.9"
tracing = "0.1.41"

[build-dependencies]
pyo3-build-config = "0.20"

[profile.release]
opt-level = "z"          # or "3" if size is less important; "z" optimizes for size which can help cache performance
lto = true               # full LTO maximizes cross-module optimization
codegen-units = 1        # better runtime performance at the cost of slower compile
panic = "abort"          # removes unwinding overhead
strip = true             # removes debug symbols
debug = false            # explicitly disable debug info
overflow-checks = false  # skip integer overflow checks in release mode
incremental = false      # disable incremental compilation for release
rpath = false            # optional: prevents embedding rpath info

[profile.dev]
opt-level = 0            # fast compilation during development
incremental = true       # incremental builds for faster rebuilds

[features]
default = []