[package]
name = "crisprme-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bump-scope = "1.3.0"
bumpalo = { version = "3.17.0", features = ["collections"] }
bytemuck = "1.23.2"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
cxx = { version = "1.0.157", features = ["c++17"] }
enum_dispatch = "0.3.13"
indicatif = "0.18.0"
memmap2 = "0.9.7"
nix = "0.30.1"
num-traits = "0.2.19"
num_cpus = "1.17.0"
rand = { version = "0.9.1" }
rayon = "1.10.0"
thread_local = "1.1.9"
tracing = "0.1.41"

[build-dependencies]
cxx-build = "1.0.157"

[dev-dependencies]
bio = "2.2.0"
