[package]
name = "crisprme"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
crisprme-core = { path = "../crisprme-core" }
indicatif = "0.17.11"
num_cpus = "1.16.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Custom allocator
mimalloc = { workspace = true }

# Tracing
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
itertools = "0.14.0"
ahash = "0.8.12"
