[package]
name = "crisprme-core"
version = "0.1.0"
edition = "2021"
authors = ["Manuel Tognon"]
license = "MIT"
publish = false

[lib]
name = "_crisprme2_native"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8"
bincode = "1.3"
bump-scope = "1.3.0"
bumpalo = { version = "3.17.0", features = ["collections"] }
bytemuck = "1.23.2"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5"
enum_dispatch = "0.3.13"
indicatif = "0.18.0"
memmap2 = "0.9.7"
nix = "0.30.1"
num-traits = "0.2.19"
num_cpus = "1.17.0"
rand = { version = "0.9.1" }
rayon = "1.10.0"
thiserror = "1.0"
thread_local = "1.1.9"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
cxx = "1.0.194"

# --- Python extension layer ---
pyo3 = { version = "0.21.2", features = ["extension-module"] }

[build-dependencies]
cxx-build = { version = "1.0.194" }
pyo3-build-config = "0.21.2"

[features]
# default = ["cuda"]
# cuda = ["dep:cxx", "dep:cxx-build"]
# default = ["cpu"]  # NOTE: dev on OSX
# cpu = []
# cxx = []


[profile.release]
opt-level = 3
lto = true               
codegen-units = 1        
panic = "abort"          
strip = true             
debug = false            
overflow-checks = false  
incremental = false      

[profile.dev]
opt-level = 0            
incremental = true   

